--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,18 +5,22 @@
     <h1><%= listTitle %></h1>
   </div>
   <div class="box">
-    <% for(var i=0;i<newItems.length; i++){ %>
-    <div class="item">
-      <input type="checkbox">
-        <p><%=newItems[i]%></p>
-    </div>
-<%}%>
-  <form class="item" action="/" method="post">
-    <input type="text" placeholder="New Item" name="newItem" autocomplete="off">
-    <button type="submit" name="button" value= <%= listTitle %>>+</button>
-  </form>
-</div>
-  </body>
+
+    <% newItems.forEach((item) => { %>
+    <form action="/delete" method="post">
+      <div class="item">
+        <input type="checkbox" name="deleteBox" onChange="this.form.submit()" value="<%=item._id%>"></input>
+        <p><%=item.name%></p>
+      </div>
+      <input type="hidden" name="listName" value="<%=listTitle%>" ></input>
+    </form>
+    <%});%>
+    <form class="item" action="/" method="post">
+      <input type="text" placeholder="New Item" name="newItem" autocomplete="off">
+      <button type="submit" name="list" value="<%=listTitle%>">+</button>
+    </form>
+  </div>
+</body>
 <%- include("footer"); -%>
 
 </html>
